--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-	<h1 class="text-center">Alurapic</h1>
+	<h1 class="text-center">GalvaoPic</h1>
 </div>
 
 <p ng-show="mensagem.length" class="alert alert-info">
