--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,13 +1,13 @@
 <h1 class="text-center">Login</h1>
-<p class="alert-danger"></p>
+<p class="alert-danger">{{mensagem}}</p>
 <form>
   <div class="form-group">
     <label>Login</label>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" ng-model="usuario.login">
   </div>
   <div class="form-group">
     <label>Senha</label>
-    <input type="password" class="form-control">
+    <input type="password" class="form-control" ng-model="usuario.senha">
   </div>
   <input type="button" value="Entrar" class="btn btn-primary">
 </form>
